Fixed spacing and added hover CSS

--- a/styles/app.css
+++ b/styles/app.css
@@ -63,6 +63,16 @@ p {
   line-height: 28px;
 }
 
+:hover.btn-branding {
+  background-color: var(--fourth-color);
+  color: var(--secondary-color);
+  border: 1px solid var(--fourth-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 28px;
+  padding: 15px 30px;
+}
+
 .btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
@@ -70,6 +80,16 @@ p {
   font-size: 18px;
   line-height: 28px;
   padding: 15px 30px;
+}
+
+:hover.btn-branding-outline {
+  background-color: var(--third-color);
+  color: var(--secondary-color);
+  font-weight: medium;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 15px 30px;
+  line-height: 28px;
 }
 
 @media (max-width: 900px) {
